convert a bunch of admin pages to uikit layouts. fix layout issues on newsletter form on marketing pages/footer. fix issue with quad picture spacing on index page.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,13 @@
+@import 'mixins';
+
 * {
     box-sizing: border-box; }
 
 html, body {
     font-family: proxima-nova, "Helvetica Neue", verdana, sans-serif;
-    background: #1D80FA; }
+    background: $sky_blue;
+    min-height: 100%;
+}
 
 body {
     font-size: 1.3rem;
@@ -24,8 +28,8 @@ h3 {
     margin: 1.8em 0 1.3em; }
 
 .uk-sticky-placeholder header {
-    background: #1D80FA;
-    color: #fff;
+    background: $sky_blue;
+    color: $bright_white;
     padding: 1.2em !important;
     z-index: 100; }
 
@@ -36,14 +40,17 @@ h3 {
     float: right;
     margin-top: 1.1em;
     font-weight: 200; }
+.k-nav .uk-nav-sub {
+  background: $sky_blue;
+}
 .k-nav .uk-subnav-pill > .uk-active > * {
-    background: #fff;
-    color: #1D80FA; }
+    background: $bright_white;
+    color: $sky_blue; }
 .k-nav a {
-    color: #fff; }
+    color: $bright_white; }
 .k-nav a:hover {
     background: rgba(255, 255, 255, 0.8);
-    color: #1D80FA; }
+    color: $sky_blue; }
 
 main > section {
     position: relative;
@@ -57,6 +64,11 @@ main > section h2 {
     margin-bottom: 0.5em;
     font-weight: 200; }
 
+.k-main-admin {
+  background: $eggshell;
+  min-height: 100vh;
+}
+
 .k-section {
     min-height: 100vh; }
 
@@ -66,11 +78,11 @@ section p.first {
     margin-bottom: 1.5em; }
 
 section.k-intro {
-    background: #1D80FA;
-    color: #fff; }
+    background: $sky_blue;
+    color: $bright_white; }
 
 section.k-info {
-    background: #FDB941;
+    background: $apricot;
     color: #141414; }
 section.k-info h2 {
     text-align: center; }
@@ -189,14 +201,14 @@ section.k-info figure {
 .k-footer #k-logo-footer #logo {
     color: red; }
 .k-footer .k-footer-newsletter {
-    border-left: 1px solid #eee; }
+    border-left: 1px solid $eggshell; }
 .k-footer .k-footer-newsletter small {
     display: block;
     text-align: center;
     color: #ccc; }
 
 .k-features {
-    background: #fff; }
+    background: $bright_white; }
 .k-features .k-feature {
     text-align: left;
     position: relative;
